# fifa-soccer-ds

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONDUCTOR_PROMPT.md  CONTRIBUTING.md  DEPENDENCY_UPGRADE_REPORT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  V2_PROGRESS.md  V2_ROADMAP.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: .gitignore  config
.github/: MANUAL_SETUP.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  jekyll-gh-pages.yml  labeler.yml  release.yml  stale.yml
audits/2026-07-20-verification/: compare_graph_builders.py  explore_report.md  phase0_review.md  run_report.md  verify_report.md
configs/: runtime.yaml  tracking_tuned.yaml  youtube_pipeline.yaml
configs/hydra/: default.yaml
docs/: index.html
scripts/: comprehensive_test_runner.py  performance_monitor.py  security_optimization.py  simple_race_test.py  test_data_pipeline_optimization.py  test_race_conditions.py  test_version_management.py
scripts/data/: preprocess.py
scripts/experimental/: create_test_video.py  extract_pedri_frames.py  process_pedri_imageio.py
scripts/model/: register_model.py
src/: __init__.py  main.py  pipeline_full.py  pipeline_orchestrator.py  schemas.py
src/analytics/: __init__.py  _pitch_control.py  tactical.py  team_classifier.py
src/api/: __init__.py  main.py  youtube_endpoints.py
src/calib/: __init__.py  homography.py  pitch_transform.py
src/classify/: soccer_classifier.py
src/data/: __init__.py  la_liga_loader.py
src/detect/: __init__.py  export_onnx.py  export_trt.py  infer.py  train_yolo.py  video_streaming.py  yolo_lora_adapter.py
src/eval/: __init__.py  evaluate_pipeline.py  metrics.py
src/graph/: __init__.py  build_graph.py  gcn_position_classifier.py
src/live/: __init__.py  barca_api.py  rtsp_capture.py  run_live.py
src/models/: __init__.py  gcn.py  train_gcn.py
src/track/: __init__.py  bytetrack_runtime.py  pipeline.py
src/train/: __init__.py  weekly_retrainer.py
src/utils/: __init__.py  health_checks.py  mlflow_helper.py  monitoring.py  network_security.py  output_paths.py  overlay.py  performance.py  vis.py
src/youtube/: __init__.py  audio_extractor.py  metadata_parser.py  video_downloader.py
tests/: README_API_SECURITY_TESTS.md  SECURITY_QUICK_REFERENCE.md  SECURITY_TESTS_SUMMARY.md  run_security_tests.sh  test_api_readiness.py  test_api_security.py  test_api_youtube.py  test_barca_api.py  test_calibration_validation.py  test_detect_smoke.py  test_e2e_pipeline.py  test_error_handling.py  test_evaluation_metrics.py  test_export_onnx.py  test_gcn_position.py  test_gcn_shapes.py  test_gcn_training_integrity.py  test_gnn_inference.py  test_graph_builder.py  test_graph_memory.py  test_imports.py  test_kaggle_loader.py  test_metadata_integrity.py  test_mlflow_integration.py  test_network_security.py  test_output_path_security.py  test_performance_optimization.py  test_pipeline_enhanced.py  test_pipeline_full.py  test_race_condition_protection.py  test_safe_model_loading.py  test_security.py  test_tactical_validation.py  test_team_classifier.py  test_track_graph.py  test_track_stub.py  test_train_yolo.py  test_version_management.py  test_video_downloader_security.py  test_weekly_retrain.py
