[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-soccer-ds-analytics"
version = "0.1.0"
description = "Analysis pipeline for FIFA Soccer DS footage."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Fifa Soccer DS Analytics Team" }
]
keywords = ["computer vision", "tracking", "sports analytics"]
dependencies = [
  "ultralytics==8.2.103",
  "supervision==0.19.0",
  "opencv-python==4.9.0.80",
  "hydra-core==1.3.2",
  "torch==2.2.2",
  "torchvision==0.17.2",
  "torch-geometric==2.4.0",
  "torchmetrics==1.3.0",
  "numpy==1.26.4",
  "scipy==1.11.4",
  "pandas==2.2.1",
  "onnx==1.15.0",
  "onnxruntime-gpu==1.16.3",
  "dvc[all]==3.48.0",
  "mlflow==2.11.3",
  "rich==13.7.0",
  "tqdm==4.66.2",
  "click==8.1.7",
  "kaggle==1.6.6",
  "pydantic==2.6.4",
  "fastapi==0.110.0",
  "uvicorn[standard]==0.28.0",
  "slowapi==0.1.9",
  "av==12.1.0",
  "scikit-learn>=1.4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
preview = true

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "build",
  "dist",
  "mlruns",
]
lint.select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "TID",
  "RUF100",
]
lint.ignore = [
  "E203",
  "E501",
]
format.quote-style = "double"
format.indent-style = "space"
format.skip-magic-trailing-comma = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "smoke: Minimal sanity tests for the detection pipeline.",
]

[tool.coverage.run]
source = ["src"]
branch = true
