[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-soccer-ds-analytics"
version = "0.1.0"
description = "Analysis pipeline for FIFA Soccer DS footage."
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Fifa Soccer DS Analytics Team" }
]
keywords = ["computer vision", "tracking", "sports analytics"]
dependencies = [
  "ultralytics==8.3.40",
  "supervision==0.27.0.post2",
  "opencv-python==4.10.0.84",
  "hydra-core==1.3.2",
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torch-geometric==2.6.1",
  "torchmetrics==1.5.2",
  "numpy==1.26.4",
  "scipy==1.17.1",
  "pandas==2.2.3",
  "onnx==1.17.0",
  "onnxruntime-gpu==1.19.2",
  "dvc[all]==3.56.0",
  "mlflow==2.17.2",
  "rich==13.9.4",
  "tqdm==4.67.1",
  "click==8.1.7",
  "kaggle==1.6.17",
  "pydantic==2.9.2",
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "slowapi==0.1.9",
  "prometheus-client==0.21.0",
  "psutil==6.1.0",
  "av==13.1.0",
  "scikit-learn==1.5.2",
]

[tool.black]
line-length = 100
target-version = ["py312"]
preview = true

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "build",
  "dist",
  "mlruns",
]
lint.isort.known-first-party = ["src"]
lint.select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "TID",
  "RUF100",
]
lint.ignore = [
  "E203",
  "E501",
  "B904",
  "SIM108",
  "SIM117",
  "SIM102",
  "SIM105",
  "SIM115",
  "B017",
  "B905",
  "E712",
]
lint.per-file-ignores = {"tests/*" = ["E402"]}
format.quote-style = "double"
format.indent-style = "space"
format.skip-magic-trailing-comma = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "smoke: Minimal sanity tests for the detection pipeline.",
  "asyncio: Marks async test functions.",
]

[tool.coverage.run]
source = ["src"]
branch = true
