[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-soccer-ds-analytics"
version = "0.2.0"
description = "Analysis pipeline for FIFA Soccer DS footage."
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Fifa Soccer DS Analytics Team" }
]
keywords = ["computer vision", "tracking", "sports analytics"]
dependencies = [
  "aiohttp==3.14.1",
  "fastapi==0.139.2",
  "numpy==2.4.4",
  "opencv-python==4.13.0.92",
  "Pillow==12.3.0",
  "prometheus-client==0.25.0",
  "psutil==7.2.2",
  "pydantic==2.13.4",
  "PyYAML==6.0.3",
  "requests==2.34.2",
  "scikit-learn==1.8.0",
  "scipy==1.17.1",
  "slowapi==0.1.10",
  "torch==2.13.0",
  "torch-geometric==2.8.0",
  "torchvision==0.28.0",
  "ultralytics==8.4.100",
  "uvicorn[standard]==0.51.0",
  "yt-dlp==2026.7.4",
]

[project.optional-dependencies]
audio = [
  "ffmpeg-python==0.2.0",
  "librosa==0.11.0",
  "openai-whisper==20250625",
]
data = [
  "av==17.0.1",
  "cryptography==48.0.1",
  "kaggle==2.2.3",
]
dev = [
  "anyio==4.14.2",
  "bandit==1.9.4",
  "build==1.5.0",
  "coverage==7.15.2",
  "httpx==0.28.1",
  "mypy==1.20.2",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
  "types-PyYAML==6.0.12.20260518",
]
export = [
  "onnx==1.22.0",
  "onnxruntime-gpu==1.26.0",
]
mlops = [
  "cryptography==48.0.1",
  "mlflow==3.14.0",
]

[project.scripts]
fifa-detect = "src.detect.infer:main"
fifa-live = "src.live.run_live:main"
fifa-pipeline = "src.pipeline_full:main"
fifa-train-gnn = "src.models.train_gcn:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "build",
  "dist",
  "mlruns",
  "audits",
]
# pre-commit passes explicit filenames, which bypass extend-exclude unless
# exclusions are forced. audits/ holds frozen verification evidence that is
# archived as produced, not maintained as project source.
force-exclude = true
lint.isort.known-first-party = ["src"]
lint.select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "TID",
  "RUF100",
]
lint.ignore = [
  "E203",
  "E501",
  "B904",
  "SIM108",
  "SIM117",
  "SIM102",
  "SIM105",
  "SIM115",
  "B017",
  "B905",
  "E712",
]
lint.per-file-ignores = {"tests/*" = ["E402"]}
format.quote-style = "double"
format.indent-style = "space"
format.skip-magic-trailing-comma = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "smoke: Minimal sanity tests for the detection pipeline.",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
packages = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# These libraries do not publish complete PEP 561 metadata for the APIs used
# here. Keep the exception scoped to imports; first-party code remains checked.
module = [
  "cv2.*",
  "librosa.*",
  "psutil.*",
  "sklearn.*",
  "scipy.*",
  "tensorrt.*",
  "torch_geometric.*",
  "whisper.*",
  "yt_dlp.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
